--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,10 @@ img {
      height: 200px;
      width: auto;
 }
+/* h1{
+     display: flex;
+} */
+section, h1 {
+     display: flex;
+     justify-content: center;
+}
